# hyperlocalise

./: .bazelrc  .dockerignore  .env.worker.example  .gitignore  .golangci.yml  .goreleaser.yml  .hyperlocalise.lock.json  .impeccable.md  AGENTS.md  BUILD.bazel  Dockerfile.vercel  LICENSE  MODULE.bazel  Makefile  README.md  action.yml  atlas-cli-i18n.hcl  atlas-cloud-translation.hcl  atlas.hcl  chunk1.txt  chunk2.txt  chunk3.txt  chunk4.txt  chunk5.txt  code_review_request.md  docker-compose.gcp.yml  docker-compose.yml  ext_check.go  ext_test.go  go.mod  go.sum  go.work  i18n.jsonc  i18n.yml  install.sh  skills-lock.json  test-tamper.ts  test_bare_string.go  tools.go  vercel.json
api/services/translation/: BUILD.bazel  service.go  service_test.go
apps/api-gateway/: BUILD.bazel  go.mod  main.go
apps/api-gateway/internal/adapters/: doc.go
apps/api-gateway/internal/auth/: doc.go
apps/api-gateway/internal/http/: server.go  server_test.go
apps/cat-validate/: BUILD.bazel  Dockerfile.vercel  auth.go  auth_test.go  handler.go  handler_test.go  main.go  server_test.go
apps/cli/: BUILD.bazel  main.go
apps/cli/cmd/: BUILD.bazel  check.go  check_test.go  crowdin.go  crowdin_test.go  entries.go  entries_test.go  eval.go  eval_test.go  eval_tui.go  export.go  export_test.go  extract.go  extract_icu.go  extract_icu_test.go  extract_test.go  init.go  init_test.go  lokalise.go  lokalise_test.go  pack.go  pack_test.go  phrase.go  phrase_locale_sanitize_test.go  phrase_test.go  root.go  root_test.go  run.go  run_diff.go  run_interactive.go  run_interactive_test.go  run_progress.go  run_progress_test.go  run_test.go  smartling.go  smartling_test.go  status.go  status_test.go  status_tui.go  sync.go  (+13 more)
apps/cli/cmd/templates/: crowdin.yml  i18n.jsonc  i18n.yml
apps/cli/internal/cliotel/: BUILD.bazel  init.go  span.go
apps/cli/internal/envloader/: BUILD.bazel
apps/cli/internal/progressui/: BUILD.bazel  renderer.go
apps/go-svc/: BUILD.bazel  auth.go  handler.go  main.go
apps/translation-dispatcher-gcp/: BUILD.bazel  Dockerfile  main.go
apps/translation-service/: BUILD.bazel  Dockerfile  README.md  main.go
apps/translation-worker/: BUILD.bazel  main.go
apps/translation-worker-gcp/: BUILD.bazel  Dockerfile  function.go  function_test.go  main.go  main_test.go
cmd/: run.go  (+24 more)
internal/csvsafe/: BUILD.bazel  csvsafe.go  csvsafe_scout_test.go  csvsafe_test.go
internal/i18n/htmltagparity/: BUILD.bazel  benchmark_test.go  htmltagparity.go  htmltagparity_scout_test.go  htmltagparity_test.go
internal/i18n/icuparser/: BUILD.bazel  ast.go  ast_test.go  bench_test.go  benchmark_test.go  coverage_test.go  datetime_skeleton_parse.go  invariant.go  invariant_scout_test.go  invariant_test.go  number_skeleton_parse.go  number_skeleton_token.go  parse.go  parse_test.go  parser_test.go  skeleton_errors.go  skeleton_test.go  skeleton_types.go
internal/i18n/locales/: BUILD.bazel  normalize.go  normalize_test.go
internal/i18n/segmentvalidate/: BUILD.bazel  debug.go  extra_placeholders.go  extra_placeholders_scout_test.go  invariant.go  kinds.go  kinds_scout_test.go  printf_scout_test.go  profile.go  profile_scout_test.go  profile_test.go  qa.go  qa_scout_test.go  qa_test.go  validate.go  validate_benchmark_test.go  validate_scout_test.go  validate_test.go
internal/i18n/storage/: BUILD.bazel  README.md  types.go  types_test.go
internal/i18n/storage/bootstrap/: bootstrap.go  bootstrap_test.go
internal/i18n/storage/crowdin/: BUILD.bazel  README.md  adapter.go  adapter_test.go  fileconfig.go  fileconfig_test.go  filemode.go  filemode_test.go  glossary.go  glossary_test.go  http_client.go  http_client_test.go  source_download.go  source_download_test.go  translation_memory.go  translation_memory_test.go
internal/i18n/storage/fileworkflow/: BUILD.bazel  workflow.go  workflow_test.go
internal/i18n/storage/hyperlocalise/: BUILD.bazel  adapter.go  (+1 more)
internal/i18n/translationfileparser/: BUILD.bazel  README.md  android_benchmark_test.go  android_xml_parser.go  android_xml_parser_test.go  arb_benchmark_test.go  arb_parser.go  arb_parser_test.go  chunk_test.go  csv_benchmark_test.go  csv_locale.go  csv_locale_test.go  csv_parser.go  csv_parser_test.go  diagnostics.go  fluent_benchmark_test.go  fluent_parser.go  fluent_parser_test.go  generic_xml_benchmark_test.go  generic_xml_parser.go  generic_xml_parser_test.go  html_parser.go  html_parser_test.go  js_ts_locale_parser.go  js_ts_locale_parser_test.go  json_marshal.go  json_parser.go  json_parser_test.go  jsonc_benchmark_test.go  jsonc_parser.go  jsonc_parser_test.go  jsts_benchmark_test.go  liquid_benchmark_test.go  liquid_corpus_test.go  liquid_parser.go  liquid_parser_test.go  markdown_ast_parity.go  markdown_ast_parity_test.go  markdown_internal_placeholders.go  markdown_internal_placeholders_test.go  (+42 more)
internal/i18n/translator/: BUILD.bazel  debug_log.go  debug_log_test.go  openai_client.go  prompts.go  prompts_test.go  provider_anthropic.go  provider_azure_openai.go  provider_bedrock.go  provider_bedrock_test.go  provider_gemini.go  provider_groq.go  provider_lmstudio.go  provider_mistral.go  provider_ollama.go  provider_openai.go  provider_openai_compatible.go  response.go  tool.go  translator.go  translator_test.go  types.go  types_test.go  usage.go  usage_test.go
internal/translation/app/: BUILD.bazel  service.go  service_test.go  types.go
internal/translation/dispatcher/: BUILD.bazel  dispatcher.go  dispatcher_test.go  headers.go
internal/translation/store/: BUILD.bazel  drivers.go  files.go  glossary.go  glossary_test.go  models.go  postgres.go  projects.go  repository.go
internal/translation/worker/: BUILD.bazel  executor.go  file_jobs.go  routing.go  routing_test.go  runner.go  worker.go  worker_test.go
pkg/hyperlocaliseapi/: BUILD.bazel  url.go  url_test.go
pkg/i18nconfig/: BUILD.bazel  i18n.go  i18n_test.go
services/jobsvc/: BUILD.bazel  go.mod
services/memorysvc/: BUILD.bazel  go.mod
services/projectsvc/: BUILD.bazel  go.mod
services/translationsvc/: BUILD.bazel  go.mod  service.go  service_test.go  support.go
(+4269 files in other folders)
