load("@gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//visibility:public"])

exports_files([
    ".bazelversion",
    "MODULE.bazel",
    "go.mod",
    "go.sum",
    "go.work",
])

gazelle(name = "gazelle")

alias(
    name = "cli",
    actual = "//apps/cli:cli",
)

filegroup(
    name = "contracts",
    srcs = ["//api/proto:contracts"],
)
