load("@gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//visibility:public"])

exports_files([
    ".bazelversion",
    "MODULE.bazel",
    "go.mod",
    "go.sum",
    "go.work",
])

gazelle(name = "gazelle")

alias(
    name = "cli",
    actual = "//apps/cli:cli",
)

alias(
    name = "translation-service",
    actual = "//apps/translation-service:translation-service",
)

filegroup(
    name = "contracts",
    srcs = ["//api/proto:contracts"],
)
