module(
    name = "hyperlocalise",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "com_github_charmbracelet_bubbles_v2",
    "com_github_charmbracelet_bubbletea_v2",
    "com_github_charmbracelet_lipgloss_v2",
    "com_github_charmbracelet_log",
    "com_github_crowdin_crowdin_api_client_go",
    "com_github_inconshreveable_mousetrap",
    "com_github_invopop_jsonschema",
    "com_github_lokalise_go_lokalise_api_v5",
    "com_github_masterminds_semver_v3",
    "com_github_mattn_go_isatty",
    "com_github_openai_openai_go_v2",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_subosito_gotenv",
    "com_github_tidwall_jsonc",
    "com_github_yuin_goldmark",
    "gorm_io_driver_sqlite",
    "gorm_io_gorm",
    "in_gopkg_yaml_v3",
    "org_golang_x_text",
)
