module(
    name = "hyperlocalise",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "cc_mvdan_gofumpt",
    "co_honnef_go_tools",
    "com_google_cloud_go_pubsub",
    "com_github_charmbracelet_log",
    "com_github_cloudevents_sdk_go_v2",
    "com_github_crowdin_crowdin_api_client_go",
    "com_github_daixiang0_gci",
    "com_github_go_critic_go_critic",
    "com_github_golangci_golangci_lint_v2",
    "com_github_googlecloudplatform_functions_framework_go",
    "com_github_invopop_jsonschema",
    "com_github_jackc_pgx_v5",
    "com_github_lokalise_go_lokalise_api_v5",
    "com_github_masterminds_semver_v3",
    "com_github_mattn_go_isatty",
    "com_github_openai_openai_go_v2",
    "com_github_spf13_cobra",
    "com_github_subosito_gotenv",
    "com_github_tidwall_jsonc",
    "com_github_uptrace_bun",
    "com_github_uptrace_bun_dialect_pgdialect",
    "com_github_yuin_goldmark",
    "in_gopkg_yaml_v3",
    "io_gorm_driver_sqlite",
    "io_gorm_gorm",
    "land_charm_bubbles_v2",
    "land_charm_bubbletea_v2",
    "land_charm_lipgloss_v2",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_text",
    "org_golang_x_tools",
)
