load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "server_lib",
    srcs = ["internal/http/server.go"],
    importpath = "github.com/quiet-circles/hyperlocalise/apps/api-gateway/internal/http",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api/openapi",
        "//pkg/client/tmsgrpc",
        "//pkg/platform/config",
        "//pkg/platform/observability",
    ],
)

go_binary(
    name = "api-gateway",
    srcs = ["main.go"],
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/client/tmsgrpc",
        "//pkg/platform/config",
        "//pkg/platform/observability",
    ],
)

go_test(
    name = "server_test",
    srcs = ["internal/http/server_test.go"],
    embed = [":server_lib"],
    deps = [
        "//pkg/client/tmsgrpc",
        "//pkg/platform/config",
        "//pkg/platform/observability",
    ],
)
