load("@rules_go//go:def.bzl", "go_binary", "go_test")

go_binary(
    name = "cat_validate",
    srcs = [
        "auth.go",
        "handler.go",
        "main.go",
    ],
    importpath = "github.com/hyperlocalise/hyperlocalise/apps/cat-validate",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/i18n/segmentvalidate",
        "@com_github_lestrrat_go_jwx_v2//jwk",
        "@com_github_lestrrat_go_jwx_v2//jwt",
        "@com_github_workos_workos_go_v4//pkg/usermanagement",
    ],
)

go_test(
    name = "cat_validate_test",
    srcs = ["handler_test.go"],
    embed = [":cat_validate"],
    deps = [
        "//internal/i18n/segmentvalidate",
        "@com_github_stretchr_testify//require",
    ],
)
