load("@rules_go//go:def.bzl", "go_binary", "go_test")

go_binary(
    name = "go_svc",
    srcs = [
        "auth.go",
        "handler.go",
        "main.go",
    ],
    importpath = "github.com/hyperlocalise/hyperlocalise/apps/go-svc",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/i18n/segmentvalidate",
        "@com_github_workos_workos_go_v7//:workos-go",
    ],
)

go_test(
    name = "go_svc_test",
    srcs = [
        "auth_test.go",
        "handler_test.go",
    ],
    embed = [":go_svc"],
    deps = [
        "//internal/i18n/segmentvalidate",
        "@com_github_stretchr_testify//require",
    ],
)
