load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "translation-dispatcher-gcp",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//internal/translation/config:config",
        "//internal/translation/dispatcher:dispatcher",
        "//internal/translation/queue/provider:provider",
        "//internal/translation/store:store",
    ],
)
