load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "translation-service",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//api/services/translation:translation",
        "//internal/translation/app:app",
        "//internal/translation/config:config",
        "//internal/translation/queue/provider:provider",
        "//internal/translation/store:store",
        "//pkg/api/proto/hyperlocalise/translation/v1:v1",
        "@org_golang_google_grpc//:grpc",
    ],
)
