load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "translation-worker-gcp",
    srcs = ["function.go"],
    importpath = "github.com/quiet-circles/hyperlocalise/apps/translation-worker-gcp",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/translation/app:app",
        "//internal/translation/config:config",
        "//internal/translation/store:store",
        "//internal/translation/worker:worker",
        "@com_github_googlecloudplatform_functions_framework_go//functions",
        "@com_github_cloudevents_sdk_go_v2//event",
    ],
)
