load("@rules_go//go:def.bzl", "go_binary", "go_test")

go_binary(
    name = "translation-worker-gcp",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cloud_go_pubsub//:pubsub",
        "//internal/translation/app:app",
        "//internal/translation/config:config",
        "//internal/translation/store:store",
        "//internal/translation/worker:worker",
    ],
)

go_test(
    name = "translation-worker-gcp_test",
    srcs = ["main_test.go"],
    deps = [
        "@com_google_cloud_go_pubsub//:pubsub",
        "//internal/translation/app:app",
        "//internal/translation/store:store",
        "//internal/translation/worker:worker",
    ],
)
