load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "translation-worker",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//internal/translation/config:config",
        "//internal/translation/store:store",
        "//internal/translation/worker:worker",
    ],
)
