load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "i18nconfig",
    srcs = [
        "i18n.go",
        "schema.go",
    ],
    importpath = "github.com/hyperlocalise/hyperlocalise/pkg/i18nconfig",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_invopop_jsonschema//:jsonschema",
        "@com_github_tidwall_jsonc//:jsonc",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "i18nconfig_test",
    srcs = ["i18n_test.go"],
    embed = [":i18nconfig"],
)
