load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "service_lib",
    srcs = ["internal/service/service.go"],
    importpath = "github.com/quiet-circles/hyperlocalise/services/jobsvc/internal/service",
    visibility = ["//visibility:private"],
    deps = ["//domains/translation"],
)

go_binary(
    name = "jobsvc",
    srcs = ["cmd/jobsvc/main.go"],
    embed = [":service_lib"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/platform/config",
        "//pkg/platform/observability",
    ],
)
