load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "translationsvc",
    srcs = [
        "service.go",
        "support.go",
    ],
    importpath = "github.com/quiet-circles/hyperlocalise/services/translationsvc",
    visibility = ["//visibility:public"],
    deps = [
        "//domains/translation",
        "//internal/i18n/translationfileparser",
    ],
)
