load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "translation",
    srcs = ["service.go"],
    importpath = "github.com/hyperlocalise/hyperlocalise/api/services/translation",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/translation/app:app",
        "//internal/translation/store:store",
        "//pkg/api/proto/hyperlocalise/translation/v1:v1",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
