load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = glob(["*.go"], exclude = ["*_test.go"]),
    embedsrcs = ["templates/i18n.jsonc"],
    importpath = "github.com/hyperlocalise/hyperlocalise/apps/cli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//apps/cli/internal/envloader",
        "//apps/cli/internal/i18n/evalsvc",
        "//apps/cli/internal/i18n/evalsvc/scoring",
        "//apps/cli/internal/i18n/localstore",
        "//apps/cli/internal/i18n/pathresolver",
        "//apps/cli/internal/i18n/runsvc",
        "//apps/cli/internal/i18n/storage/bootstrap",
        "//apps/cli/internal/i18n/storageregistry",
        "//apps/cli/internal/i18n/syncsvc",
        "//apps/cli/internal/progressui",
        "//internal/i18n/storage",
        "//internal/i18n/translationfileparser",
        "//pkg/i18nconfig",
        "@land_charm_bubbles_v2//filepicker",
        "@land_charm_bubbles_v2//help",
        "@land_charm_bubbles_v2//key",
        "@land_charm_bubbles_v2//list",
        "@land_charm_bubbles_v2//paginator",
        "@land_charm_bubbles_v2//progress",
        "@land_charm_bubbles_v2//table",
        "@land_charm_bubbles_v2//textinput",
        "@land_charm_bubbletea_v2//:bubbletea",
        "@land_charm_lipgloss_v2//:lipgloss",
        "@com_github_masterminds_semver_v3//:semver",
        "@com_github_mattn_go_isatty//:go-isatty",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_cobra//doc",
    ],
)

go_test(
    name = "cmd_test",
    srcs = glob(["*_test.go"]),
    embed = [":cmd"],
    deps = [
        "//apps/cli/internal/i18n/evalsvc",
        "//apps/cli/internal/i18n/evalsvc/scoring",
        "//apps/cli/internal/i18n/runsvc",
        "//apps/cli/internal/i18n/syncsvc",
        "//internal/i18n/storage",
        "//pkg/i18nconfig",
        "@land_charm_bubbles_v2//list",
        "@land_charm_bubbletea_v2//:bubbletea",
        "@com_github_masterminds_semver_v3//:semver",
        "@com_github_spf13_cobra//:cobra",
    ],
)
