load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "segmentvalidate",
    srcs = [
        "debug.go",
        "extra_placeholders.go",
        "invariant.go",
        "kinds.go",
        "profile.go",
        "qa.go",
        "validate.go",
    ],
    importpath = "github.com/hyperlocalise/hyperlocalise/internal/i18n/segmentvalidate",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/i18n/htmltagparity",
        "//internal/i18n/icuparser",
        "//internal/i18n/translationfileparser",
    ],
)

go_test(
    name = "segmentvalidate_test",
    srcs = [
        "profile_test.go",
        "qa_test.go",
        "validate_test.go",
    ],
    embed = [":segmentvalidate"],
)
