load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = ["types.go"],
    importpath = "github.com/hyperlocalise/hyperlocalise/internal/i18n/storage",
    visibility = ["//visibility:public"],
)

go_test(
    name = "storage_test",
    srcs = ["types_test.go"],
    embed = [":storage"],
)
