load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "translationfileparser",
    srcs = glob(["*.go"], exclude = ["*_test.go"]),
    importpath = "github.com/quiet-circles/hyperlocalise/internal/i18n/translationfileparser",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_tidwall_jsonc//:jsonc",
        "@com_github_yuin_goldmark//:goldmark",
        "@com_github_yuin_goldmark//ast",
        "@com_github_yuin_goldmark//extension",
        "@com_github_yuin_goldmark//extension/ast",
        "@com_github_yuin_goldmark//text",
    ],
)
