load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "translator",
    srcs = glob(["*.go"], exclude = ["*_test.go"]),
    importpath = "github.com/hyperlocalise/hyperlocalise/internal/i18n/translator",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_openai_openai_go_v3//:openai-go",
        "@com_github_openai_openai_go_v3//option",
    ],
)
