load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["service.go", "types.go"],
    importpath = "github.com/quiet-circles/hyperlocalise/internal/translation/app",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/translation/queue:queue",
        "//internal/translation/store:store",
        "//pkg/api/proto/hyperlocalise/translation/v1:v1",
        "@com_github_uptrace_bun//:bun",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
