load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dispatcher",
    srcs = glob(["*.go"], exclude = ["*_test.go"]),
    importpath = "github.com/quiet-circles/hyperlocalise/internal/translation/dispatcher",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/translation/queue:queue",
        "//internal/translation/store:store",
    ],
)

go_test(
    name = "dispatcher_test",
    srcs = ["dispatcher_test.go"],
    embed = [":dispatcher"],
    deps = [
        "//internal/translation/queue:queue",
        "//internal/translation/store:store",
    ],
)
