load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "store",
    srcs = [
        "files.go",
        "glossary.go",
        "models.go",
        "postgres.go",
        "projects.go",
        "repository.go",
    ],
    importpath = "github.com/hyperlocalise/hyperlocalise/internal/translation/store",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//stdlib",
        "@com_github_uptrace_bun//:bun",
        "@com_github_uptrace_bun_dialect_pgdialect//:pgdialect",
    ],
)

go_test(
    name = "store_test",
    srcs = ["glossary_test.go"],
    embed = [":store"],
)
