load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "store",
    srcs = [
        "files.go",
        "glossary.go",
        "models.go",
        "postgres.go",
        "projects.go",
        "repository.go",
    ],
    importpath = "github.com/hyperlocalise/hyperlocalise/internal/translation/store",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_hyperlocalise_rain_orm//pkg/rain:rain",
        "@com_github_hyperlocalise_rain_orm//pkg/schema:schema",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//stdlib",
        "@org_modernc_sqlite//:sqlite",
    ],
)

go_test(
    name = "store_test",
    srcs = ["glossary_test.go"],
    embed = [":store"],
)
