load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "worker",
    srcs = ["worker.go"],
    importpath = "github.com/quiet-circles/hyperlocalise/internal/translation/worker",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/translation/app:app",
        "//internal/translation/store:store",
        "//pkg/api/proto/hyperlocalise/translation/v1:v1",
        "@com_github_uptrace_bun//:bun",
    ],
)
