load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "worker",
    srcs = glob(["*.go"], exclude = ["*_test.go"]),
    importpath = "github.com/hyperlocalise/hyperlocalise/internal/translation/worker",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/i18n/translator:translator",
        "//internal/translation/app:app",
        "//internal/translation/store:store",
        "//pkg/api/proto/hyperlocalise/translation/v1:v1",
    ],
)

go_test(
    name = "worker_test",
    srcs = ["worker_test.go"],
    embed = [":worker"],
    deps = [
        "//internal/translation/app:app",
        "//internal/translation/store:store",
        "//pkg/api/proto/hyperlocalise/translation/v1:v1",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)
